feat: se a lista de opções modal estive vazia mostrar msg

--- a/index.html
+++ b/index.html
@@ -607,10 +607,10 @@
             console.log('removeu')
             
             //verifica qtd de option
-            if($('.option-lista').find('.option-item').length == 0){
+            if($('.option-lista-edit').find('.option-item').length == 0){
                 console.log($('.option-lista').find('.option-item').length, "qtd")
 
-               // $('.msg-option').css('display','flex')
+               $('.msg-option').css('display','flex')
             }
         });
         
