feat: mensagem caso não tenha campo

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <label for="">Selecione o tipo</label>
                 <select name="tipo" id="tipo-campo">
                     <option value="">Selecione</option>
-                    <option value="um">Texto Simples</option>
-                    <option value="dois">Texto Logo</option>
+                    <option value="um">Texto Curto</option>
+                    <option value="dois">Parágrafo</option>
                     <option value="tres">Lista de Opções</option>
                 </select>
                 <small class="erro-campo">Selecione o tipo</small>
@@ -108,7 +108,9 @@
            <button type="button" class="open-modal-add">+ Novo Campo</button>
         </div>
 
-
+        <div class="msg-campo-vazio">
+            <p>Clique no botão <strong>"+ Novo Campo"</strong> para começar a criar seu formulário.</p>
+        </div>
         
        
    
@@ -148,8 +150,8 @@
                 <label for="">Selecione o tipo</label>
                 <select name="tipo" id="tipo-campo-edit">
                     <option value="">Selecione</option>
-                    <option value="um">Texto Simples</option>
-                    <option value="dois">Texto Longo</option>
+                    <option value="um">Texto Curto</option>
+                    <option value="dois">Parágrafo</option>
                     <option value="tres">Lista de Opções</option>
                 </select>
                 <small class="erro-campo">Preencha o campo</small>
